# VibraTicketPanelAdm

./: .env  .env.production  .gitignore  MIGRATION_PROGRESS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: build.yml
deploy/: .env.production  DEPLOY_ADMIN.md  Dockerfile.backend  Dockerfile.frontend  README.md  deploy-admin.sh  deploy.sh  docker-compose.yml  health-check.sh  init.sql  nginx-admin.conf  nginx-frontend.conf  vps-setup.sh
public/wireframes/: a-pomelo.html  b-terracota.html  c-vibrant.html  c2-toned.html  index.html
src/: App.jsx  main.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: boca.rs  http.rs  lib.rs  main.rs  printer.rs  secure.rs
src/api/: client.js
src/components/: CreateEvent.jsx  CreateShow.jsx  CreateVenue.jsx  EventFunctions.jsx  EventImageUpload.jsx  EventStyleEditor.jsx  HeaderNav.jsx  LoginModal.jsx  MercadoPagoConfig.jsx  MobileCardItem.jsx  ProtectedRoute.jsx  RegisterModal.jsx  VenueMap.jsx
src/components/admin/: BocaPrinterConfig.jsx  DiscountCodeForm.jsx  DiscountStatistics.jsx  (+1 more)
src/hooks/: useAuth.jsx  useEvents.jsx  useGoogleMaps.jsx  useVenues.jsx
src/lib/: canvasGeom.js  tauri.js  tauriAdapter.js
src/pages/: AdminLogin.css  AdminLogin.jsx  ForgotPassword.jsx  VenueLayoutBuilder.jsx
src/services/: apiService.js  discountService.js  printAgentService.js  ticketTemplateService.js
src/styles/: admin-responsive.css  shell.css  theme.css
src/test/: setup.js
src/utils/: fglSimulator.js  imageUtils.js
(+30 files in other folders)
