[package]
name = "vibratickets-admin"
version = "0.1.0"
description = "VibraTickets Admin - Desktop"
authors = ["VibraTickets"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
name = "vibratickets_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# Cross-platform printer listing + raw (RAW datatype on Windows, lp/CUPS on macOS/Linux)
printers = "2"
# OS-native secure storage: Credential Manager (Windows) / Keychain (macOS).
# Los backends de plataforma ya vienen en las features por defecto en 2.x.
keyring = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
